# django-rest-friendship

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  mkdocs.yml  pyproject.toml  pytest.ini  readme.md  readme.rst  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: dev-tests.yml  python-package.yml  version-bump.yml
docs/: index.md
rest_friendship/: __init__.py  apps.py  serializers.py  urls.py  utils.py  views.py
tests/: conftest.py  factories.py  serializers.py  test_views.py  urls.py
