[metadata]
name = django-rest-friendship-PBTEST
package = rest_friendship
url = https://github.com/dnmellen/django-rest-friendship
author = Diego Navarro Mellén
author_email = dnmellen@gmail.com
description = DRF endpoints for django-friendship
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license_files = 
    LICENSE
project_urls =
    GitHub = https://github.com/dnmellen/django-rest-friendship
    Contributions = https://github.com/dnmellen/django-rest-friendship/graphs/contributors
    Issues = https://github.com/dnmellen/django-rest-friendship/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: BSD License
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Natural Language :: English
    Environment :: Web Environment
keywords =
    django
    django-friendship
    django-rest-friendship
    restframework
    back-end
    webdev
    OOP

[options]
package_dir =
    = rest_framework
packages = find:
include_package_data = True
python_requires = >=3.8, <4
install_requires =
    Django>=3.2.9<5
    djangorestframework==3.13.1
    django-friendship>=1.9.4

[options.packages.find]
where = rest_framework
exclude =
	build*
	dist*
	docs*

[options.package_data]
* = *.txt, *.rst, *.md

[options.extras_require]
test = 
    coverage
    factory-boy
    mkdocs
    pytest
    pytest-django
    pytest-flake8
    tox

[wheel]
universal = 1