[metadata]
name = drfriendstest-PIBOY
package = rest_friendship
version = file: VERSION
url = https://github.com/dnmellen/django-rest-friendship
author = Diego Navarro Mellén
author_email = dnmellen@gmail.com
description = DRF endpoints for django-friendship
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
license = BSD
project_urls =
    GitHub = https://github.com/dnmellen/django-rest-friendship
    Contributions = https://github.com/dnmellen/django-rest-friendship/graphs/contributors
    Issues = https://github.com/dnmellen/django-rest-friendship/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: BSD License
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Natural Language :: English
    Environment :: Web Environment
keywords =
    django
    django-friendship
    django-rest-friendship
    restframework
    back-end
    webdev
    OOP

[options]
zip_safe = False
package_dir = 
    = rest_friendship
packages = find:
include_package_data = True
python_requires = >=3.8, <4
install_requires =
    Django>=3.2.9<5
    djangorestframework==3.13.1
    django-friendship>=1.9.4

[options.packages.find]
where = django-rest-friendship


[options.extras_require]
test = 
    coverage
    factory-boy
    mkdocs
    flake8
    pytest
    pytest-django
    tox

[flake8]
max-line-length = 90
ignore = E501,E9,F63,F7,F82
max-complexity = 12
exclude = .git,.github,.tox,.vscode,__pycache__,.pytest_cache,docs,old,build,dist,env,htmlcov,*.xml,.coverage,.eggs,*.egg

[wheel]
universal = 1