[metadata]
name = django-rest-friendship
package = rest_friendship
version = attr: rest_friendship.__version__
url = https://github.com/dnmellen/django-rest-friendship
author = Diego Navarro Mellén
author_email = dnmellen@gmail.com
description = DRF endpoints for django-friendship
long_description = file: README.rst
long_description_content_type = text/x-rst
license = ISC License
project_urls =
    Contributions = https://github.com/dnmellen/django-rest-friendship/graphs/contributors
    Issues = https://github.com/dnmellen/django-rest-friendship/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: ISC License (ISCL)
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Natural Language :: English
    Environment :: Web Environment
keywords =
    django
    django-friendship
    django-rest-friendship
    friends
    API
    restframework
    back-end
    webdev
    OOP

[options]
zip_safe = False
packages = find:
python_requires = >=3.8, <4
install_requires =
    Django>=3.2.9<5
    djangorestframework==3.13.1
    django-friendship>=1.9.4

[options.extras_require]
test = 
    coverage
    factory-boy
    flake8
    pytest
    pytest-django
    tox
docs = 
    mkdocs

[flake8]
max-line-length = 90
ignore = E501,E9,F63,F7,F82
max-complexity = 12
exclude = .git,.github,.tox,.vscode,__pycache__,.pytest_cache,docs,old,build,dist,env,htmlcov,*.xml,.coverage,.eggs,*.egg


[wheel]
universal = 1
